--- a/moh.html
+++ b/moh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Song Name</h1> <br> <h3Artist Name</h3>
+<h1>Song Name</h1> <br> <h3>Artist Name</h3>
 <audio controls>
   <source src="horse.mp3" type="audio/mpeg">
   <source src="horse.mp3" type="audio/mpeg">
