--- a/moh.html
+++ b/moh.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Song Name</h1> <br> <h3>Artist Name</h3> <br>
+<h1>Song Name</h1>
+<h3>Artist Name</h3> <br>
 <audio controls>
   <source src="horse.mp3" type="audio/mpeg">
   <source src="horse.mp3" type="audio/mpeg">
