--- a/contact-us.html
+++ b/contact-us.html
@@ -3,8 +3,8 @@
   <link rel="stylesheet" href="main.css">
 <body>
   
-  <h1>Contact US</h1>
-    <li><h3>tel: 0800046563</h3>
+  <h1 style="text-align:center;">Contact US</h1>
+    <li style="text-align:center;"><h3>tel: 0800046563</h3>
     <h3>fax:</h3>
     <h3>Email:</h3>
     <h3></h3>
