--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,6 @@
     <h3>Email:</h3>
     <h3></h3>
     </li> 
-
+<script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207430517"></script>
 </body>
 </html>
